# CPPython-Core

./: pyproject.toml
cppython_core/: resolution.py  schema.py  utility.py
cppython_core/plugin_schema/: generator.py  interface.py  provider.py  scm.py  vcs.py
tests/unit/: test_plugin_schema.py  test_resolution.py  test_schema.py  test_utility.py
